# noema

./: .gitignore  .gitmodules  .tools  Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md  package-lock.json  worktree-manager.sh
.claude/: CLAUDE.md  pre-compact-config.md
.claude/hooks/: pre-compact.sh
.worktree-manager/: completion.bash  completion.zsh
cli/: Cargo.toml
cli/src/: main.rs
commands/: Cargo.toml
commands/commands_macros/: Cargo.toml
commands/commands_macros/src/: command.rs  register.rs
commands/src/: command.rs  command_handler.rs  completion.rs  completion_helper.rs  context.rs  lib.rs
commands/tests/: simple_test.rs
commands_macros/src/: command.rs  completable.rs  lib.rs  register.rs
config/: Cargo.toml
config/src/: crypto.rs  lib.rs  paths.rs  settings.rs
conversation/: Cargo.toml
conversation/src/: lib.rs
doc/: DESIGN.md
docs/: ARCHITECTURE_PLAN.md  CHANGELOG-0.2.md  DESIGN.md  FUTURE_ROADMAP.md  NOEMA_0.2_FEATURES.md  PHASE1_SCRATCHPAD.md  REFACTOR_PLAN.md  STORAGE.md  parallel-model-comparison.md  simply.yaml
docs/designs/: ARCHITECTURE.md  HOOK_SYSTEM.md  UNIFIED_CONTENT_MODEL.md
etc/: setup.sh
llm/: Cargo.toml
llm/src/: api.rs  lib.rs
llm_macros/: Cargo.toml
llm_macros/src/: lib.rs  tool_methods.rs
llm_macros/tests/: tool_macro_tests.rs
noema-app/: Cargo.toml
noema-app/src/: backend.rs  events.rs  main.rs  state.rs  systems.rs
noema-app/src/ui/: input_panel.rs  messages_panel.rs  mod.rs  side_panel.rs  top_panel.rs
noema-audio/: Cargo.toml
noema-audio/src/: audio.rs  browser_backend.rs  browser_voice.rs  coordinator.rs  cpal_backend.rs  dummy_backend.rs  lib.rs  traits.rs  transcription.rs  types.rs  utils.rs  vad.rs  voice_agent.rs
noema-core/: Cargo.toml  DESIGN.md  README.md
noema-core/llm/: Cargo.toml
noema-core/llm/llm_macros/: Cargo.toml
noema-core/llm/llm_macros/src/: delegate_provider.rs
noema-core/llm/llm_macros/tests/: tool_macro_method_tests.rs  tool_macro_tests.rs
noema-core/llm/src/: api.rs  client.rs  lib.rs  registry.rs  tools.rs  traffic_log.rs
noema-core/llm/src/providers/: mod.rs
noema-core/llm/src/providers/claude/: mod.rs
noema-core/llm/src/providers/claude/chat/: api.rs  model.rs
noema-core/llm/src/providers/gemini/: provider.rs
noema-core/llm/src/providers/gemini/chat/: api.rs  model.rs
noema-core/llm/src/providers/mistral/: mod.rs  provider.rs
noema-core/llm/src/providers/mistral/chat/: api.rs  mod.rs  model.rs
noema-core/llm/src/providers/ollama/: mod.rs
noema-core/llm/src/providers/ollama/chat/: api.rs  model.rs
noema-core/llm/src/providers/openai/: provider.rs
noema-core/llm/src/providers/openai/chat/: api.rs  model.rs
noema-core/src/: agent.rs  context.rs  document_resolver.rs  engine.rs  lib.rs  manager.rs  session.rs  traffic_log.rs  transaction.rs
noema-core/src/agents/: execution_context.rs  mcp_agent.rs  mod.rs  simple_agent.rs  spawn_handler.rs  tool_agent.rs
noema-core/src/mcp/: config.rs  mod.rs  registry.rs
noema-core/src/storage/: blob.rs  content.rs  coordinator.rs  document_resolver.rs  helper.rs  ids.rs  memory.rs  mod.rs  sqlite.rs  traits.rs
noema-core/src/storage/asset/: mod.rs  sqlite.rs
noema-core/src/storage/blob/: fs.rs  mod.rs
noema-core/src/storage/content_block/: mod.rs  sqlite.rs  types.rs
noema-core/src/storage/conversation/: conversation_store.rs  mod.rs  sqlite.rs  turn_store.rs  types.rs
noema-core/src/storage/document/: mod.rs  resolver.rs  sqlite.rs
noema-core/src/storage/implementations/: mod.rs
noema-core/src/storage/implementations/fs/: blob.rs  mod.rs
noema-core/src/storage/implementations/memory/: asset.rs  blob.rs  collection.rs  content_block.rs  conversation.rs  document.rs  entity.rs  mod.rs  reference.rs  text.rs  turn.rs  user.rs
noema-core/src/storage/implementations/mock/: asset.rs  blob.rs  collection.rs  conversation.rs  document.rs  entity.rs  mod.rs  reference.rs  text.rs  turn.rs  types.rs  user.rs
noema-core/src/storage/implementations/sqlite/: asset.rs  collection.rs  content_block.rs  conversation.rs  document.rs  entity.rs  mod.rs  reference.rs  temporal.rs  text.rs  turn.rs  user.rs
noema-core/src/storage/session/: memory.rs  mod.rs  resolver.rs  session.rs  sqlite.rs  tests.rs  types.rs
noema-core/src/storage/traits/: asset.rs  blob.rs  collection.rs  content_block.rs  conversation.rs  document.rs  entity.rs  mod.rs  reference.rs  temporal.rs  text.rs  turn.rs  user.rs
noema-core/src/storage/types/: asset.rs  blob.rs  collection.rs  content_block.rs  conversation.rs  document.rs  entity.rs  mod.rs  reference.rs  stored.rs  temporal.rs  user.rs
noema-core/src/storage/user/: mod.rs  sqlite.rs
noema-core/templates/: document.txt  document_shorthand.txt
noema-desktop/: package-lock.json  package.json
noema-desktop/src/: App.css  App.tsx  index.css  mime_types.ts  tauri.ts  types.ts
noema-desktop/src-tauri/: Cargo.toml  tauri.conf.json
noema-desktop/src-tauri/bindings/: ForkResult.ts
noema-desktop/src-tauri/src/: core_server.rs  gdocs_server.rs  lib.rs  logging.rs  state.rs  types.rs
noema-desktop/src-tauri/src/commands/: chat.rs  files.rs  gdocs.rs  init.rs  mcp.rs  settings.rs  voice.rs
noema-ext/: Cargo.toml
noema-ext/src/: attachments.rs  lib.rs  pdf.rs
noema-mcp-core/: Cargo.toml
noema-mcp-core/src/: lib.rs  tools.rs
noema-mcp-gdocs/: Cargo.toml
noema-mcp-gdocs/src/: google_api.rs  lib.rs  main.rs  tools.rs  well_known.rs
noema-ui/: package-lock.json  package.json
noema-ui/src/: App.tsx  (+3 more)
noema-ui/src-tauri/: Cargo.toml
noema_ui/: package-lock.json  package.json
noema_ui/src-tauri/: Cargo.toml  tauri.conf.json
noema_ui/src-tauri/capabilities/: default.json
noema_ui/src-tauri/src/: lib.rs  logging.rs  main.rs  types.rs
noema_ui/src-tauri/src/commands/: chat.rs  files.rs  mod.rs
simply/: simply.md
src/: api.rs  cache.rs  client.rs  command.rs  completion.rs  error.rs  lib.rs  main.rs  parsed_args.rs  registry.rs  token_stream.rs  tools.rs
tests/: command_test.rs  simple_test.rs
tui/: Cargo.toml
tui/src/: main.rs
(+124 files in other folders)
