[workspace]
resolver = "3"
members = ["commands", "config", "noema-core", "noema-core/llm", "noema-audio", "noema-ext", "noema-desktop/src-tauri", "noema-mcp-gdocs", "noema-mcp-core"]
default-members = ["noema-desktop/src-tauri"]

[workspace.package]
version = "0.3.0"
authors = ["Chris"]
edition = "2021"
