[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["env"] }
clap_derive = "4.5.49"
config = { path = "../config" }
noema-core = { path = "../noema-core" }
futures = "0.3.31"
llm = { path = "../noema-core/llm" }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
