[package]
name = "commands"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "time"] }
anyhow = "1.0"
commands_macros = { path = "commands_macros" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
