[package]
name = "noema-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bevy and UI
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_ui",
    "bevy_text",
    "x11",
    "wayland",
    "webgl2",
    "webgpu",
    "tonemapping_luts",
    "default_font",
    "multi_threaded",
] }
bevy_egui = "0.32"
egui = "0.30"

# Async bridge
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }

# Core dependencies
noema-core = { path = "../noema-core", features = ["sqlite"] }
noema-audio = { path = "../noema-audio" }
llm = { path = "../llm" }
config = { path = "../config" }

# Image decoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = "0.22"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
