[package]
name = "noema-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
cpal = "0.16.0"
llm = { version = "0.1.0", path = "../llm" }
noema-core = { version = "0.1.0", path = "../noema-core" }
tokio = { version = "1.48.0", features = ["sync"] }
whisper-rs = "0.15.1"
