[package]
name = "noema-audio"
version.workspace = true
edition.workspace = true

[features]
default = []
backend-cpal = ["dep:cpal"]
browser = []

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4"
cpal = { version = "0.16.0", optional = true }
dirs = "6.0"
llm = { path = "../noema-core/llm" }
noema-core = { path = "../noema-core" }
tokio = { version = "1.48.0", features = ["sync"] }
tracing = "0.1.43"
whisper-rs = "0.15.1"
