[package]
name = "noema-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlite = ["rusqlite", "uuid"]
rusqlite = ["dep:rusqlite"]
uuid = ["dep:uuid"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["sync", "time", "fs", "io-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
llm = { path = "llm" }
rmcp = { version = "0.9.1", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-worker"] }
config = { path = "../config" }
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
chrono = "0.4"
askama = "0.12"

# Blob storage (CAS)
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Optional SQLite support
rusqlite = { version = "0.34", features = ["bundled"], optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }