[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
commands = { path = "../commands" }
config = { path = "../config" }
conversation = { path = "../conversation" }
crossterm = "0.28"
futures = "0.3"
llm = { path = "../llm" }
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
tui-input = "0.10"
