[package]
name = "noema-desktop"
version.workspace = true
edition.workspace = true
description = "Noema AI Chat Application"
authors.workspace = true

[lib]
name = "noema_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat", "serde-json-impl"] }
tokio = { version = "1", features = ["full", "fs", "io-util"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
regex = "1"
rmcp = { version = "0.9.1", features = ["client"] }

# Local workspace dependencies
noema-core = { path = "../../noema-core", features = ["sqlite"] }
llm = { path = "../../noema-core/llm" }
config = { path = "../../config" }
noema-audio = { path = "../../noema-audio", features = ["browser"] }
noema-ext = { path = "../../noema-ext" }
noema-mcp-gdocs = { path = "../../noema-mcp-gdocs" }
thiserror = "2.0.17"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"
dirs = "6.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
native-audio = ["noema-audio/backend-cpal"]
