[package]
name = "noema_ui"
version = "0.1.0"
description = "Noema AI Chat Application"
authors = ["Chris"]
edition = "2021"

[lib]
name = "noema_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
pdf-extract = "0.10"

# Local workspace dependencies
noema-core = { path = "../../noema-core", features = ["sqlite"] }
llm = { path = "../../llm" }
config = { path = "../../config" }
noema-audio = { path = "../../noema-audio" }
lopdf = "0.38.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"
dirs = "6.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
